--- a/ferramentas/ferramentas_p-09.html
+++ b/ferramentas/ferramentas_p-09.html
@@ -72,9 +72,9 @@
 					 fazer com que um design pareça mais emocionante ou imersivo.</p>
 				<div class="row">
 					<div class="col-md-6 m-auto text-center">
-						<a class="text-success bg-light mb-2 p-3 canto" href="portfolio_p-08.html"><img src="../img/icones/seta_esquerda.png" width="50px"><strong> Anterior </strong></a>
+						<a class="text-success bg-light mb-2 p-3 canto" href="ferramentas_p-08.html"><img src="../img/icones/seta_esquerda.png" width="50px"><strong> Anterior </strong></a>
 						<br /><br />
-						<a class="text-success bg-light p-3 canto" href="../portfolio.php"><img src="../img/icones/home.png" width="50px"><strong> Voltar ao início</strong></a>
+						<a class="text-success bg-light p-3 canto" href="ferramentas_p-00.php"><img src="../img/icones/home.png" width="50px"><strong> Voltar ao início</strong></a>
 					</div>
 				</div>
 			</div>
