--- a/ferramentas/ferramentas_p-08.html
+++ b/ferramentas/ferramentas_p-08.html
@@ -105,9 +105,9 @@
 				<div class="col-md-6 m-auto text-center">
 					<a href="../index.php"><img src="../img/icones/home.png" width="50px"><strong> Voltar ao início</strong></a>
 					<br />
-					<a href="portfolio_p-07.html"><img src="../img/icones/seta_esquerda.png" width="50px"><strong> Anterior </strong></a>
+					<a href="ferramentas_p-07.html"><img src="../img/icones/seta_esquerda.png" width="50px"><strong> Anterior </strong></a>
 					|
-					<a href="portfolio_p-09.html"><strong> Próxima </strong><img src="../img/icones/seta_direita.png" width="50px"></a>
+					<a href="ferramentas_p-09.html"><strong> Próxima </strong><img src="../img/icones/seta_direita.png" width="50px"></a>
 				</div>
 			</div>
 			<br /><br />
