--- a/portfolio/formatura.html
+++ b/portfolio/formatura.html
@@ -21,9 +21,48 @@
 
 		<title>RS - Formatura</title>
 	</head>
-	<body>
-		<div class="text-center bg-formatura">
-			<h2 class="text-success">Modelo para Formatura</h2>
+	<body class="bg-formatura">
+		<div class="text-center pt-3">
+			<h2 class="text-success negrito">Modelo para Formatura</h2>
 		</div>
+		<hr class="divisor">
+		<div class="container">
+			<div class="titulo-formatura">
+				<div class="row">
+					<div class="col-md-12 text-center">
+						<h3 class="animate-character-formatura text-fasthand negrito">Formatura de Análise e Desenvolvimento de Sistemas<br />
+							Universidade UniSSol - Turma 2018/1 - Parassol - PR<br />
+							29/02/2020</h3>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6 m-auto">
+					<img src="../img/portifolio/formatura/moldura-paisagem-baixa.jpg" alt="galeria">
+				</div>
+			</div>
+			<div class="mt-3">				
+                <div class="caixa d-flex flex-wrap">
+                    <div class="item border border-primary m-1"><a href="formatura-carousel.php"><img src="../img/portifolio/formatura/fotocurso01.jpg" width="200"></a></div>
+                    <div class="item border border-primary m-1"><a href="formatura-carousel.php"><img src="../img/portifolio/formatura/fotocurso02.jpg" width="200"></a></div>
+                    <div class="item border border-primary m-1"><a href="formatura-carousel.php"><img src="../img/portifolio/formatura/formatura.jpg" width="200"></a></div>
+                    <div class="item border border-primary m-1"><a href="formatura-carousel.php"><img src="../img/portifolio/formatura/foto02.jpg" width="200"></a></div>
+                    <div class="item border border-primary m-1"><a href="formatura-carousel.php"><img src="../img/portifolio/formatura/foto03.jpg" width="200"></a></div>
+                    <div class="item border border-primary m-1"><a href="formatura-carousel.php"><img src="../img/portifolio/formatura/foto04.jpg" width="200"></a></div>
+                    <div class="item border border-primary m-1"><a href="formatura-carousel.php"><img src="../img/portifolio/formatura/foto05.jpg" width="200"></a></div>
+                    <div class="item border border-primary m-1"><a href="formatura-carousel.php"><img src="../img/portifolio/formatura/foto07.jpg" width="200"></a></div>
+                    <div class="item border border-primary m-1"><a href="formatura-carousel.php"><img src="../img/portifolio/formatura/foto08.jpg" width="200"></a></div>
+                    <div class="item border border-primary m-1"><a href="formatura-carousel.php"><img src="../img/portifolio/formatura/foto09.jpg" width="200"></a></div>
+                    <div class="item border border-primary m-1"><a href="formatura-carousel.php"><img src="../img/portifolio/formatura/foto10.jpg" width="200"></a></div>
+                    <div class="item border border-primary m-1"><a href="formatura-carousel.php"><img src="../img/portifolio/formatura/foto11.jpg" width="200"></a></div>
+                    <div class="item border border-primary m-1"><a href="formatura-carousel.php"><img src="../img/portifolio/formatura/foto12.jpg" width="200"></a></div>
+                </div>            
+            </div>
+		</div>
+		<!-- Optional JavaScript -->
+		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+		<script src="\assets/Bootstrap4/js/bootstrap.min.js"></script>
 	</body>    
 </html>
