--- a/ferramentas/ferramentas_p-04.html
+++ b/ferramentas/ferramentas_p-04.html
@@ -25,14 +25,14 @@
 		<div class="container">
 			<div class="mt-2">
 				<div class="d-flex justify-content-center">
-					<h5 class="text-success">4 / 9</h5>
+					<h5 class="text-primary">4 / 9</h5>
 				</div>
 				<hr class="divisor">
 			</div>
 			<div class="row">
 				<div class="col-md-8 m-auto text-center">
 					<div class="text-center">
-						<h5 class="text-center text-success">Imagens - Parte 2</h5>						
+						<h5 class="text-center text-primary">Imagens - Parte 2</h5>						
 					</div>
 				</div>
 			</div>
@@ -48,7 +48,7 @@
                        Visualmente falando, fica mais bem organizado e bonito</strong></p>
             </div>
 			<hr class="divisor">
-			<div class="border border-success">				
+			<div class="border border-primary">				
                 <div class="caixa d-flex flex-wrap">
                     <div class="item border border-primary m-1"><img src="../img/fotos/imagem1.jpeg" width="150"></div>
                     <div class="item border border-primary m-1"><img src="../img/fotos/imagem2.jpeg" width="150"></div>
