--- a/ferramentas/ferramentas_p-01.html
+++ b/ferramentas/ferramentas_p-01.html
@@ -25,7 +25,7 @@
 		<div class="container">
 			<div class="mt-2">
 				<div class="d-flex justify-content-center">
-					<h5 class="text-success">1 / 9</h5>
+					<h5 class="text-primary">1 / 9</h5>
 				</div>
 				<hr class="divisor">
 			</div>
@@ -35,7 +35,7 @@
 			<div class="row">
 				<div class="col-md-10 m-auto text-center">
 					<div class="text-center">
-						<h5 class="text-center text-success">
+						<h5 class="text-center text-primary">
 							Fontes - tipos
 						</h5>
 						<hr class="divisor">
