--- a/ferramentas/ferramentas_p-02.html
+++ b/ferramentas/ferramentas_p-02.html
@@ -25,14 +25,14 @@
 		<div class="container">
 			<div class="mt-2">
 				<div class="d-flex justify-content-center">
-					<h5 class="text-success">2 / 9</h5>
+					<h5 class="text-primary">2 / 9</h5>
 				</div>
 				<hr class="divisor">
 			</div>
 			<div class="row">
 				<div class="col-md-8 m-auto text-center">
 					<div class="text-center">
-						<h5 class="text-center text-success">
+						<h5 class="text-center text-primary">
 							Fontes - cores
 						</h5>						
 					</div>
