--- a/ferramentas/ferramentas_p-05.html
+++ b/ferramentas/ferramentas_p-05.html
@@ -25,14 +25,14 @@
 		<div class="container">
 			<div class="mt-2">
 				<div class="d-flex justify-content-center">
-					<h5 class="text-success">5 / 9</h5>
+					<h5 class="text-primary">5 / 9</h5>
 				</div>
 				<hr class="divisor">
 			</div>
 			<div class="row">
 				<div class="col-md-8 m-auto text-center">
 					<div class="text-center">
-						<h5 class="text-center text-success">Formulários</h5>						
+						<h5 class="text-center text-primary">Formulários</h5>						
 					</div>
 				</div>
 			</div>
@@ -46,9 +46,9 @@
 					  além de tudo, ser cansativos e desgastantes para o funcionário, novo ou antigo, que está
 					   sendo atualizado sobre o novo sistema.</strong></p>
             </div>
-			<div class="border border-success">
+			<div class="border border-primary">
 				<div class="row">
-					<div class="col-md-6 border-right border-success">
+					<div class="col-md-6 border-right border-primary">
 						<h5 class="text-center pt-2">Formulários - Tipos de entrada - Colunado</h5>
 						<hr class="divisor ">
 						<div class="p-1">
@@ -123,7 +123,7 @@
 							</form>
 						</div>
 					</div>
-					<div class="col-md-6 border-success">
+					<div class="col-md-6 border-primary">
 						<h5 class="text-center pt-2">Formulários Inline - Bootstrap</h5>
 						<hr class="divisor">
 						<form>           
