--- a/ferramentas/ferramentas_p-04.html
+++ b/ferramentas/ferramentas_p-04.html
@@ -9,7 +9,13 @@
 		<!--[if lt IE 9]>
 			<script src="../js/html5shiv.js"></script>
 		<![endif]-->
-
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-2XS66KFNYE"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'G-2XS66KFNYE');
+		</script>
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="../assets/Bootstrap4/css/bootstrap.min.css">
 
@@ -18,7 +24,7 @@
 
 		<!-- CSS CUSTOMIZADO -->
 		<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
-
+		<link rel="icon" href="../img/logos/logo.png" type="image/x-icon">
 		<title>RS - Resolve Systems</title>
 	</head>
 	<body>
